<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <import type="com.example.chucknorrisjokes.presentation.exception.Status"/>

        <variable
            name="data"
            type="com.example.chucknorrisjokes.ui.main.MainViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/lyt_joke_share"
            android:visibility="invisible"
            app:bgColor="@{data.joke.color}"
            app:textJoke="@{data.joke.value}"/>

        <include
            android:id="@+id/lytOffline"
            layout="@layout/lyt_offline"
            android:visibility="@{data.networkState.status==Status.FAILED?View.VISIBLE:View.GONE}"
            app:network="@{data.networkState.failure.msg}"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/motion_base"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutDescription="@xml/scene_main"
            android:visibility="@{data.networkState.status == Status.FAILED?View.GONE:View.VISIBLE}">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginBottom="307dp"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/cardJoke"
                android:visibility="invisible"/>

            <FrameLayout
                android:id="@+id/lytButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/cardJoke"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:visibility="invisible">
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="@{data.networkState.status==Status.LOADING?View.VISIBLE:View.GONE}"
                    android:padding="16dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:visibility="@{data.networkState.status==Status.SUCCESS?View.VISIBLE:View.INVISIBLE}">

                    <Button
                        android:id="@+id/btnShare"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/btn_round"
                        android:text="@string/share_this_joke"
                        android:foreground="?attr/selectableItemBackground"/>

                    <Button
                        android:id="@+id/btnNext"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:text="@string/i_want_another_joke"
                        android:onClick="@{()->data.getRandomJoke()}"
                        android:background="@drawable/btn_round"
                        android:foreground="?attr/selectableItemBackground"
                        android:layout_marginTop="8dp"/>

                </LinearLayout>
            </FrameLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardJoke"
                lyt_color="@{data.joke.color}"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="16dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="40dp"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.25"/>

                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/img_chucknorris_logo"
                    android:elevation="1dp"
                    android:rotation="-90"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/textView"
                    app:layout_constraintTop_toTopOf="@id/cardJoke"
                    app:layout_constraintBottom_toBottomOf="@id/cardJoke"
                    app:layout_constraintWidth_percent="0.25"/>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@{data.joke.value}"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="40sp"
                    app:autoSizeTextType="uniform"
                    android:elevation="1dp"
                    app:layout_constraintLeft_toRightOf="@id/imgLogo"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/cardJoke"
                    app:layout_constraintHeight_percent="0.21"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/spacer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/content_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lytButton"
                android:visibility="gone">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/content_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/title_layout">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/textViewContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="32dp"
                        android:paddingEnd="32dp"
                        android:paddingBottom="32dp"
                        android:text="@string/lorem_ipsum"/>
                </androidx.core.widget.NestedScrollView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/title_layout_bg_collapse"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/cardJoke"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:padding="24dp"
                    android:text="CATEGORY"
                    android:textColor="@android:color/background_dark"
                    android:textSize="22sp" />
            </LinearLayout>

        </androidx.constraintlayout.motion.widget.MotionLayout>
    </FrameLayout>

</layout>