...
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/colorPrimary" />

                <SearchView
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/padding_normal"
                    android:iconifiedByDefault="false"
                    android:transitionGroup="true"
                    tools:ignore="RtlCompat"
...

            </FrameLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvJokes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{(viewModel.networkState.status==Status.SUCCESS &amp;&amp; viewModel.dataStatus == DataStatus.NOT_EMPTY) ?View.VISIBLE:View.GONE}"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

...
