...
                        android:text="@{viewModel.title}"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                    <ImageView
                        android:id="@+id/actionSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_search"
                        android:padding="16dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:transitionName="@string/transition_search_back"/>
...
                app:layout_constraintBottom_toTopOf="@id/lytButton"/>

            <View
                android:id="@+id/spacer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/rvCategory"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lytButton"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategory"
...
